tests/valid_inputs/printf.cpp

int printf(const char * fmt, ...);

int main() {
	printf("%d\n", 42);
}
