tests/invalid_inputs/sema/assign_into_const_pointer.cpp

int main() {
	int *const p1, *p2;
	p1 = p2;
}
